[n] Добавлено апи для сервисов.
